# ScholarAssist

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.spark  Makefile  README.md  docker-compose.yml  pyproject.toml
dags/: __init__.py  bulk_ingestion_dag.py  deduplication_dag.py  incremental_update_dag.py  normalization_dag.py  reindex_dag.py
docs/: api_reference.md  architecture.md
frontend/: package-lock.json  package.json
frontend/prisma/: dev.db  schema.prisma
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/features/: AuthButton.tsx  ClaimList.tsx  DocumentUploader.tsx  EvidenceCard.tsx
frontend/src/lib/: api.ts
scripts/: download_samples.py
src/: __init__.py
src/api/: __init__.py  dependencies.py  main.py  middleware.py
src/api/models/: __init__.py  record.py
src/api/routers/: __init__.py  authors.py  bibliography.py  citations.py  claims.py  documents.py  export.py  health.py  provenance.py  quality.py  records.py  venues.py
src/bibliography/: formatter.py
src/claims/: extractor.py  verifier.py
src/config/: __init__.py  settings.py
src/connectors/: __init__.py  base.py  core_ac.py  crossref.py  dblp.py  openalex.py  opencitations.py  semantic_scholar.py  unpaywall.py
src/deduplication/: __init__.py  blocking.py  confidence.py  golden_record.py  graph_resolver.py  job.py  lsh_matcher.py
src/documents/: exporter.py  parser.py  storage.py
src/indexing/: __init__.py  bulk_indexer.py  index_manager.py  mappings.py
src/ingestion/: __init__.py  bulk_ingester.py  incremental_ingester.py  manifest.py  retry.py
src/normalization/: __init__.py  cleaners.py  job.py  schema.py  transforms.py
src/quality/: __init__.py  auditor.py  reporter.py
tests/: __init__.py
tests/fixtures/: crossref_sample.json  openalex_sample.json  semantic_scholar_sample.json
(+2 files in other folders)
