[project]
name = "scholarassist-pipeline"
version = "0.1.0"
description = "Academic Dataset Pipeline for ScholarAssist - Phase 1: Ingestion, Normalization, Deduplication, Indexing, and API"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # Core
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "python-dotenv>=1.0,<2",

    # API
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "httpx>=0.27,<1",

    # Search
    "opensearch-py>=2.6,<3",

    # Data Processing
    "pyspark>=3.5,<4",
    "delta-spark>=3.2,<4",
    "pyarrow>=16,<18",
    "pandas>=2.2,<3",

    # Storage (S3-compatible)
    "boto3>=1.34,<2",

    # Orchestration
    "apache-airflow>=2.9,<3",

    # Utilities
    "tenacity>=8.3,<9",
    "orjson>=3.10,<4",
    "xxhash>=3.4,<4",
    "datasketch>=1.6,<2",
    "tqdm>=4.66,<5",
    "click>=8.1,<9",

    # Monitoring
    "prometheus-client>=0.20,<1",
    "structlog>=24.1,<25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "pytest-mock>=3.14,<4",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "pre-commit>=3.7,<4",
    "moto[s3]>=5.0,<6",
    "freezegun>=1.5,<2",
    "factory-boy>=3.3,<4",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
